fix(colors): Add color for cards in dark mode

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -9,6 +9,7 @@
   --structures-color: var(--yellow-tournesol-main-731);
   --terms-color: var(--beige-gris-galet-main-702);
   --users-color: #FF0000;
+  --grey-card: #F9F8F6;
 }
 [data-fr-theme="dark"] {
   --categories-color: var(--green-menthe-main-548);
@@ -21,6 +22,7 @@
   --structures-color : var(--yellow-tournesol-main-731);
   --terms-color: var(--beige-gris-galet-main-702);
   --users-color: #FF0000;
+  --grey-card: #232322;
 }
 
 :root {
