--- a/src/styles/dsfr-overwrite.scss
+++ b/src/styles/dsfr-overwrite.scss
@@ -45,5 +45,5 @@
 }
 
 .fr-card--grey {
-  background-color: #F9F8F6 !important;
+  background-color: var(--grey-card) !important;
 }
